@@ -1,0 +1,10 @@
+<script type="text/javascript">
+  if(typeof zw == "undefined") var zw = {};
+  zw.loggedIn = <dtml-var "('Authenticated' in REQUEST.AUTHENTICATED_USER.getRoles()) and 'true' or 'false'">;
+  zw.anonEdit = <dtml-var "getattr(_, 'zw_anon_edit', None) and 'true' or 'false'">;
+  zw.ziddlyPath = '<dtml-var "REQUEST.URL">';
+  zw.isAdmin = <dtml-var "('Manager' in REQUEST.AUTHENTICATED_USER.getRoles()) and 'true' or 'false'">;
+  zw.latestTiddler = <dtml-var "REQUEST.PARENTS[0].ZiddlyWiki.actions.get_timestamp(root=REQUEST.PARENTS[0])">;
+  zw.username = '<dtml-var "REQUEST.AUTHENTICATED_USER.getUserName()">';
+  version.extensions.ZiddlyWiki = '<dtml-var "REQUEST.PARENTS[0].ZiddlyWiki.version">';
+</script>
